# png_encoder_decoder

./: .gitignore  CMakeLists.txt  LICENSE  LICENSE.txt  README.md  crc.py  notes.md
include/: png_decoder.h  png_errors.h
src/: CMakeLists.txt  main.c  png_decoder.c  png_logger.h  png_types_macros.h  png_validate.c  png_validate.h
tests/: CMakeLists.txt  test_png_decoder.cpp
